--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -163,12 +163,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Recursive non-linear equations describing the cytotype_dynamics model represents stochastic individual simulations\n"
+    "Recursive non-linear equations describing the cytotype_dynamics model represents stochastic individual simulations"
    ]
   },
   {
